# ultimate_filament_rack_pipe_generator

./: .gitignore  .pylintrc  .ruff.toml  README.md  cspell.config.yaml  main.py  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/actions/cicd_setup/: action.yml  actions.yml
.github/actions/setup_openscad/: action.yml
.github/actions/setup_uv/: action.yml
.github/workflows/: auto_feature_branches.yml  auto_protected_branches.yml  style.yml  test_style.yml
.github/workflows/archive/: auto_protected_branches.yml
assets/: threads.scad
builds/: f3d_ufr_hex_pipe_generator_makerlab.scad
docs/: CHANGE_LOG.md
export/: hex_pipe.scad
exports/: hex_pipe_makerlab.scad
src/: __init__.py  formatter.py  generator.py
src/helpers/: __init__.py  cicd.py  logs.py
tasks/: __init__.py  combos.py  debug.py  openscad.py  openscad_lint.py  tests.py  uv.py
